<resources>
    <string name="app_name">registrodeinfracoes</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="record">Gravar</string>
    <string name="stop">Parar</string>
    <string name="play_stop">Play or Stop</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">Informação</string>
    <string name="registrar">Registrar</string>
    <string name="placa_veiculo">Placa do Veículo</string>
    <string name="marca_veiculo">Marca do Veículo</string>
    <string name="modelo_veiculo">Modelo do Veículo</string>
    <string name="identificacao_local">Identificação do Local</string>
    <string name="identificacao_infracao">Identificação da Infração</string>
    <string name="observacoes">Observações</string>
    <string name="voltar">Voltar</string>
    <string name="login_info">Insira seu e-mail</string>
    <string name="senha_info">Insira sua senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="novo_usuario">Sou Novo Aqui</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="perfil">Perfil</string>
    <string name="inicio">Início</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="title_go_to_setting">GOTO SETTINGS</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_teste">Teste</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_info">Insira seu nome completo</string>
    <string name="request_permission">Request Permission</string>
</resources>
