<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context="com.sirint.registrodeinfracoes.LoginActivity"
        tools:layout_editor_absoluteX="9dp">


        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-black"
            android:text="Login"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:fontFamily="sans-serif"
            android:hint="@string/login_info"
            android:textSize="@dimen/fontRegistry" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/senha_info"
            android:inputType="textPassword"
            android:textSize="@dimen/fontRegistry" />

        <Button
            android:id="@+id/entrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="10dp"
            android:onClick="entrar"
            android:text="@string/entrar" />

        <TextView
            android:id="@+id/txt_esqueci_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/esqueci_minha_senha"
            android:onClick="forgotPassword"
            android:textSize="@dimen/fontRegistry" />


        <TextView
            android:id="@+id/txt_novo_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="novoUsuario"
            android:layout_marginVertical="10dp"
            android:text="@string/novo_usuario"
            android:textSize="@dimen/fontRegistry" />


        <ProgressBar
            android:id="@+id/progressBar_login"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>